--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess the Word</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Unlock&display=swap"
       rel="stylesheet" />
+    <!-- css -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- js -->
     <script src="js/script.js" defer></script>
   </head>
 
@@ -24,7 +27,7 @@
       <ul class="guessed-letters"></ul>
       <form action="" class="guess-form">
         <label for="letter">Type one letter:</label>
-        <input type="text" name="letter" class="letter" />
+        <input type="text" name="letter" class="letter"/>
         <div class="form-element button-element">
           <button class="guess">Guess!</button>
         </div>
